assets/css/style.css
body {
    padding: 0px;
    margin: 0px;
    background: #f0fbff;
    font-family: 'Inter', sans-serif;
}

header {
    background: #fff;
    box-shadow: 0px 4px 8px rgb(0 0 0 / 8%)
}

section {
    overflow: hidden;
}

.navbar {
    display: flex;
    justify-content: space-between;
    box-shadow: 0px 0px 11px #dfd8d8;
    height: 92px;
    background: #fff;
    width: 100%;
}

.nav-link {
    font-weight: 600;
    font-size: 17px;
    color: #000 !important;
    font-weight: 600;
}

.paytm-icon {
    display: inline-block;
    max-width: 128px;
    max-height: 40px;
    margin-left: 30px;
}

.toggler-wrap {
    display: inline-block;
}

.navbar-toggler-icon {
    margin-left: 15px;
    color: black;
}

.navbar-left-section {
    display: flex;
    justify-content: center;
    align-items: center;
}

.login-btn-wrap {
    background-color: #00baf2;
    padding-left: 20px;
    border-radius: 20px;
    padding-top: 1px;
    padding-bottom: 1px;
    margin-right: 25px;
}

.login-btn-text {
    font-size: 15px;
    color: white;
    font-family: 'Inter', sans-serif;
    font-weight: 600;
}

.login-btn-icon {
    width: 34px;
    height: 34px;
    border-radius: 50%;
    border: 2px solid #00baf2;
    margin-left: 2px;
}

@media only screen and (max-width: 1137px) {
    .middle-section {
        display: none;
    }
}

.ribbon-wrap, .ribbon {
    height: 48px;
    background: #f6f6f6;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: 500;
}

.ribbon-text {
    font-size: 15px;
    color: black;
}

.nav-link:hover {
    background-color: #eaedef;
}

/* 
index banner 1 */

.banner1 {
    display: flex;
    flex-direction: row;
    background: #fff;
    padding: 98px 0 98px;
    position: relative;
}

.banner-info-wrap {
    flex: 1;
    margin-left: 98px;
}

.banner-img-wrap {
    flex: 1;
}

.banner1-img {
    display: inline-block;
    width: 528px;
    position: absolute;
    right: 0;
    top: 98px;
}

.banner1-paytm-icon {
    display: inline-block;
    width: 80px;
    box-shadow: 0 5px 20px rgb(0 41 112 / 10%);
    border-radius: 16px;
}

.banner-info-title {
    font-size: 54px;
    font-weight: 700;
    line-height: 65px;
}

.paytm-icon-wrap {
    margin-bottom: 48px;
}

.banner1-info {
    padding-top: 10px;
    width: 475px;
    margin-bottom: 40px;
    font-size: 20px;
    font-weight: 500;
    line-height: 30px;
}

.banner-download-btn {
    display: flex;
    background: #000;
    color: #fff;
    font-weight: 500;
    padding: 3px 15px;
    border-radius: 28px;
    width: 249px;
    border: 1px solid black;
    transition: all .4s;

}

.banner-download-btn:hover {
    background-color: white;
    border: 1px solid black;
    color: black;
}

.download-text-wrap {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 6px;
    height: 44px;
    font-size: 15px;
}

.download-btn-icons-wrap {

    display: flex;
    justify-content: center;
    align-items: center;
}

.fa-apple,
.fa-google-play {
    padding: 0 6px;
    height: 44px;
    font-size: 15px;

    display: flex;
    justify-content: center;
    align-items: center;
}

@media only screen and (max-width: 1137px) {
    .banner-info-wrap {
        margin-left: 20px;
    }

    .banner1-info {
        width: 380px;
    }

    .banner-info-title {
        font-size: 42px;
    }

    .banner1-img {
        display: none;
    }
}

/* banner 3 services */
.services-wrap {
    background-color: #00baf2;
    padding: 65px 0px;
}

.services-title {
    font-size: 36px;
    color: #fff;
    font-weight: 700;
    display: flex;
    align-items: center;
}

.service-image {
    width: 64px;
    margin-bottom: 17px;
    background: #fff;
    border-radius: 100%;
}

.service {
    width: 140px;
    margin-right: 32px;
    cursor: pointer;
    border-radius: 12px;
    padding: 16px 7px 16px 16px;
    justify-content: space-between;
    font-size: 17px;
    color: #fff;
    font-weight: 500;
    line-height: 25px;
    height: 183px;
    transition: all .3s;
    display: inline-block;
    flex: 1;
}

.service:hover {
    background-color: #03abdf;
}

.services-list {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 25px;
}

.service-info {
    margin-right: 33px;
    font-size: 15px;
    font-weight: 600;
}

/* service2 banner */
.service2-wrap {
    background-color: #0f4a8a;
}

.service2:hover {
    background-color: #013c7d;
}

.service2-info {
    margin-right: 36px !important;
    font-size: 18px;
    font-weight: 600;
}

